name:                Blog
version:             0.0.1.0
-- synopsis:            
-- description:         
homepage:            http://blog.paranoidlabs.org
license:             MPL-2.0
license-file:        LICENSE
author:              Gregor Reitzenstein
maintainer:          dean4devil@paranoidlabs.org
copyright:           (c) 2017 Gregor Reitzenstein
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.24

executable static-generator
    hs-source-dirs:     src/
    main-is:            Main.hs
    other-modules:      Blog, Blog.Templates, Blog.Post, Blog.Write
    default-extensions: OverloadedStrings, EmptyDataDecls
    build-depends:      base,
                        containers,
                        text,
                        feed,
                        pandoc >= 1.19,
                        pandoc-types,
                        blaze-html,
                        blaze-markup,
                        shake,
                        shakespeare,
                        shakespeare-sass,
                        feed

    default-language:   Haskell2010
