name:                Blog
version:             0.0.1.0
-- synopsis:            
-- description:         
homepage:            http://blog.paranoidlabs.org
license:             MPL-2.0
license-file:        LICENSE
author:              Dean Davis
maintainer:          dean4devil@paranoidlabs.org
copyright:           (c) 2017 Dean Davis
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.24

executable static-generator
    main-is:            Build.hs
    other-modules:      Paranoidlabs.Templates
    default-extensions: OverloadedStrings, EmptyDataDecls
    build-depends:      base,
                        feed,
                        pandoc,
                        blaze-html,
                        blaze-markup,
                        shake,
                        shakespeare,
                        feed

    default-language:   Haskell2010
